--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,10 @@
          url('fonts/Vazir.woff') format('woff');
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
     font-family: 'Vazir', Tahoma, Arial;
     background-color: #f9f9f9;
@@ -15,24 +19,26 @@ body {
 
 .banner-container {
     min-height: 100vh;
+    position: relative;
+    overflow: hidden;
 }
 
 .banner {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    position: absolute;
+    position: relative;
 }
 
 .gradient-overlay {
     position: absolute;
     top: 0;
     left: 0;
-    right: 0;
-    bottom: 0;
-    background: rgba(0, 0, 0, 0.2);
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.3);
 }
 
 .banner video {
@@ -52,22 +58,29 @@ body {
 }
 
 .banner h1 {
-    font-size: 50px;
-    margin: 20px 0;
+    font-size: 52px;
+    margin: 28px 0;
 }
 
 .banner p {
     font-size: 30px;
 }
 
+.content-wrapper {
+    margin: 0 8%;
+}
+
+section {
+    min-height: 100vh;
+    display: flex;
+    justify-content: center;
+    scroll-snap-align: start;
+}
+
 .content-section {
     display: flex;
-    align-items: center;
-    margin: 10% 6% 0 0;
-    opacity: 0;
-    transform: translateY(-30px);
+    padding: 42px 0;
     transition: opacity 0.5s ease, transform 0.5s ease;
-    height: 100vh;
 }
 
 .dynamic-content {
@@ -79,10 +92,19 @@ body {
 
 .dynamic-content .text {
     flex: 1;
-    padding: 20px;
-    max-width: 50%;
+    max-width: 68%;
     text-align: justify;
 }
+
+.text h2 {
+  font-size: 32px;
+}
+
+.text p {
+  font-size: 20px;
+  line-height: 2.8rem;
+}
+
 
 .dynamic-content img {
     height: 420px;
@@ -100,30 +122,46 @@ body {
 
 .products {
     display: flex;
-    justify-content: center;
-    margin: 40px 0;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 10px;
+    align-items: stretch;
 }
 
 .product {
-    position: relative;
-    margin: 0 54px;
+    flex: 1 1 200px;
+    max-width: 250px;
+    margin: 0 auto;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-height: 300px;
 }
 
 .product img {
-    height: 340px;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    width: 100%;
+    height: auto;
+    max-height: 300px;
+    object-fit: contain;
+    transition: transform 0.4s ease;
 }
 
 .product:hover {
-    transform: scale(1.2) rotate(5deg);
-    /* box-shadow: 0 8px 20px rgba(0, 0, 0, 0.5); */
+    transform: scale(1.2) rotate(4deg); /* کمی چرخش برای ظاهر جذاب‌تر */
+}
+
+
+.text h2 {
+    font-size: 36px; /* تنظیم اندازه تایتل محصولات */
+    margin: 10px 0; /* اضافه کردن فاصله بالا و پایین */
 }
 
 .blog {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    margin: 0 8%;
+    margin: 40px 8%; /* اضافه کردن فاصله بالا و پایین */
 }
 
 .blog-tile {
@@ -133,8 +171,8 @@ body {
 }
 
 .blog-tile img {
-    width: auto;
-    height: 260px;
+    width: 100%;
+    height: 220px;
     display: block;
     transition: transform 0.3s ease;
 }
@@ -146,7 +184,6 @@ body {
     right: 0;
     background: rgba(0, 0, 0, 0.7);
     color: white;
-    padding: 20px;
     text-align: center;
     transform: translateY(100%);
     transition: transform 0.3s;
@@ -156,10 +193,11 @@ body {
     transform: translateY(0);
 }
 
+
 .navigation {
     position: fixed;
     right: 32px;
-    top: 90px;
+    top: 82px;
     display: flex;
     flex-direction: column;
     gap: 36px;
@@ -167,21 +205,21 @@ body {
 }
 
 .nav-circle {
-    width: 48px;
-    height: 48px;
-    background-color: rgba(255, 255, 255, 0.3);
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
     color: #000;
+    background-color: rgba(255, 255, 255, 0.2);
     font-size: 20px;
     cursor: pointer;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
 }
 
 .nav-circle:hover {
-    background-color: rgba(255, 255, 255, 1);
+    background-color: rgba(255, 255, 255, 1) !important;
     color: #000;
     transform: scale(1.25);
     transition: transform 0.6s, background-color 0.3s, color 0.3s;
@@ -221,7 +259,7 @@ body {
     .scrolling-gif {
         bottom: 100px;
         left: 20px;
-        width: 90%;
+        width: 500px;
     }
 
     .products {
