--- a/css/styles.css
+++ b/css/styles.css
@@ -96,16 +96,6 @@ section {
     text-align: justify;
 }
 
-.text h2 {
-  font-size: 28px;
-}
-
-.text p {
-  font-size: 18px;
-  line-height: 2.8rem;
-}
-
-
 .dynamic-content img {
     height: 420px;
     width: auto;
@@ -154,8 +144,13 @@ section {
 
 
 .text h2 {
-    font-size: 36px; /* تنظیم اندازه تایتل محصولات */
-    margin: 10px 0; /* اضافه کردن فاصله بالا و پایین */
+    font-size: 28px;
+    margin: 10px 0;
+}
+
+.text p {
+  font-size: 18px;
+  line-height: 2.8rem;
 }
 
 .blog {
