--- a/css/styles.css
+++ b/css/styles.css
@@ -154,8 +154,8 @@ section {
 
 .blog {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-    margin: 40px 8%; /* اضافه کردن فاصله بالا و پایین */
+    grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+    margin: 40px 8%;
 }
 
 .blog-tile {
@@ -166,7 +166,7 @@ section {
 
 .blog-tile img {
     width: 100%;
-    height: 200px;
+    height: auto;
     display: block;
     transition: transform 0.3s ease;
 }
